adding all Event API requests
